# edgai-ai-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
bindings/android/jni/: eduos_jni.c
db/: schema.sql
db/demo/: demo_curriculum.db
db/nigeria/waec/mathematics/: mathematics.db
include/edgai/: edgai.h  edgai_rag.h  edgai_types.h
include/eduos/: eduos.h  eduos_rag.h  eduos_types.h
src/core/: cache.c  profile.c  query.c  session.c  state.c
src/dbus/: signals.c
src/inference/: edgai_tier.h  eduos_tier.h  llama_backend.c  model_loader.c  tier.c
src/rag/: client.py  embedder.c  engine.py  formatter.c  preprocessor.c  ranker.c  retriever.c
src/voice/: audio_capture.c  audio_capture.h  sanitize.c  sanitize.h  speak.c  transcribe.c  transcribe.h  vad.c  vad.h
tests/: test_inference.c  test_preprocessor.c  test_query.c  test_rag.c  test_retriever.c  test_session.c  test_state.c  test_voice.c
tools/: chat.c
